# LFSR

./: CMakeLists.txt  LFSR.asm  Makefile  README.md  main.c  tarefas.txt
